==============================
django-activitysync change log
==============================

Repository version
------------------

* Added TwitterSearchProvider to allow syncing the results of a Twitter
  search query

* BACKWARDS INCOMPATIBLE CHANGE: Renamed TwitterProvider to TwitterUserProvider
  to distinguish it from the new TwitterSearchProvider


Version 0.1.2, 8 Feb 2011
-------------------------

Packaged from changeset 10 of the Mercurial repository.

* Fixed license metadata to reflect the LICENSE included in the project (BSD)

* Added more information to the readme about usage


Version 0.1.1, 6 Feb 2011
-------------------------

* Initial packaged version intended for use

* Initial set out documentation


Version 0.1.0, 6 Feb 2011
-------------------------

* Code ported over from dancarrollorg project (http://bitbucket.org/dancarroll/dancarrollorg)

* Test package and distribution
