@@ -1,4 +1,5 @@
 Django==1.2.4
+feedparser==4.1
 httplib2==0.6.0
 oauth2==1.5.163
 python-twitter==0.8.1
